# weather-forecast-bot

./: .env.tests  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
src/: const.py  const_api.py  exceptions.py  main.py  models.py  regular_expressions.py  settings.py
src/bot/: bot.py  const.py  handlers.py  messages.py
src/models/: models_for_db.py  query_models_api.py
src/services/: geolocation_client.py  text.py  wheater_client.py
src/services/db/: models_for_db.py  repos.py  uow.py
src/services/db/migrations/: env.py  script.py.mako
src/services/db/migrations/versions/: 2023_10_16_1904-eea99b3124ad_initial_migration.py  2023_10_23_1945-18d28e11a960_initial.py
src/services/geolocation/: client.py  geolocation_client.py
src/services/ui/: bot.py  const_ui.py  constants.py  create_message.py  handlers.py
src/services/weather/: client.py  const_weather.py  weather_client.py
src/settings/: settings.py
src/usecases/: usecase.py
src/view/bot/: add_new_cities_in_bd.py  chahge_preferred_city_user.py  create_markup.py  create_message.py  telegrambot.py
tests/: conftest.py
tests/bot/: test_bot.py  test_handlers.py
tests/services/: test_text.py
tests/services/db/models/: test_city.py  test_user.py
tests/services/db/repos/: test_city_repo.py  test_user_city_repo.py  test_user_repo.py
tests/services/geolocation/: test_geolocation_client.py
tests/services/ui/: test_bot.py  test_handlers.py
tests/services/weather/: test_weather_client.py
tests/unit/services/: test_geolocation_client.py  test_weather_client.py
tests/utils/: db.py  fixtures.py
